--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             <div class="container">
                 <a href="./subpage/contact.html">Contact</a>
                 <a href="./subpage/aboutme.html">About Me</a>
-                <a href="#research">Research</a>
-                <!-- <a href="#publications">Publications</a> -->
+                <a href="#project">Project</a>
+                <a href="#publication">Publication</a>
                 <a href="#news">News</a>
                 <a href="index.html">Home</a>
             </div>
@@ -153,7 +153,7 @@
                                 ><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071;"></i
                             ></a>
                             <!-- &emsp;<a href="https://twitter.com/HW7308"><i class="fab fa-twitter" style="font-size: 24px; color: #4F6071;"></i></a> -->
-                            &emsp;<a href="./pdfs/CV_Hao_Wang.pdf"><i class="ai ai-cv" style="font-size: 24px; color: #4f6071;"></i></a>
+                            &emsp;<a href="./docs/CV/CV_Hao_Wang.pdf"><i class="ai ai-cv" style="font-size: 24px; color: #4f6071;"></i></a>
                         </div>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                             I am also an aspiring musician and <a href="https://www.instagram.com/_1wanghao1_/">photographer</a>. -->
                             <br />
                             <br />
-                            You can view my CV <a href="./pdfs/CV_Hao_Wang.pdf">here</a>.
+                            You can view my CV <a href="./docs/CV/CV_Hao_Wang.pdf">here</a>.
                         </p>
                     </div>
 
@@ -236,7 +236,7 @@
                     </div>
 
                     <!-- List of publications -->
-                    <div id="publications" class="vspace-top">
+                    <div id="publication" class="vspace-top">
                         <h1>Publication</h1>
                         <div class="row vspace-top">
                             <div class="col-sm-3">
@@ -258,11 +258,11 @@
                     </div>
 
                     <!-- List of research projects -->
-                    <div id="research" class="vspace-top">
-                        <h1>Research Highlight</h1>
+                    <div id="project" class="vspace-top">
+                        <h1>Projects Highlight</h1>
                         <div class="row vspace-top-news">
                             <div class="col-sm-3">
-                                <img src="dissertation/msc/msc.png" class="img-fluid" />
+                                <img src="docs/dissertation/msc/MSc.png" class="img-fluid" />
                             </div>
                             <div class="col">
                                 <div class="paper-title">
@@ -272,14 +272,15 @@
                                     Dissertation for Master’s degree
                                 </div>
                                 <div>
-                                    <a href="https://hwang7308.github.io/dissertation/msc/abstract.html">[Abstract]</a>
-                                    <a href="https://project-archive.inf.ed.ac.uk/all/msc/20193468/msc_proj.pdf">[PDF]</a>
+                                    <a href="docs/dissertation/msc/abstract.html">[Abstract]</a>
+                                    <a href="docs/dissertation/msc/[2019][MSc]Gender Identification from 3D Facial Surface Model.pdf">[PDF]</a>
+                                    <!-- <a href="https://project-archive.inf.ed.ac.uk/all/msc/20193468/msc_proj.pdf">[PDF]</a> -->
                                 </div>
                             </div>
                         </div>
                         <div class="row vspace-top-news">
                             <div class="col-sm-3">
-                                <img src="dissertation/beng/beng.png" class="img-fluid" />
+                                <img src="docs/dissertation/beng/BEng.png" class="img-fluid" />
                             </div>
                             <div class="col">
                                 <div class="paper-title">
@@ -289,7 +290,8 @@
                                     Dissertation for Bachelor’s degree
                                 </div>
                                 <div>
-                                    <a href="https://hwang7308.github.io/dissertation/beng/abstract.html">[Abstract]</a>
+                                    <a href="docs/dissertation/beng/abstract.html">[Abstract]</a>
+                                    <a href="docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
                                 </div>
                             </div>
                         </div>
