--- a/subpage/contact.html
+++ b/subpage/contact.html
@@ -118,8 +118,8 @@
             <div class="container">
                 <a href="#contact">Contact</a>
                 <a href="./aboutme.html">About Me</a>
-                <a href="../index.html#research">Research</a>
-                <!-- <a href="#publications">Publications</a> -->
+                <a href="../index.html#project">Project</a>
+                <a href="../index.html#publication">Publication</a>
                 <a href="../index.html#news">News</a>
                 <a href="../index.html">Home</a>
             </div>
