fix error in path to docs

--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -139,27 +139,29 @@
                             <div class="col">
                                 - MSc (with Distinction), Informatics, The University of Edinburgh, 2019
                                 <br />
-                                &emsp;Dissertation: Gender Identification from 3D Facial Surface Model
+                                &emsp;Dissertation: Gender Identification from 3D Facial Surface Model &emsp;<a href="../docs/dissertation/msc/abstract.html">[Abstract]</a>
+                                <a href="../docs/dissertation/msc/[2019][MSc]Gender Identification from 3D Facial Surface Model.pdf">[PDF]</a>
                                 <br />
                                 &emsp;Supervisor:
                                 <a href="https://homepages.inf.ed.ac.uk/rbf/">Robert B. Fisher</a>
                                 <br />
-                                &emsp;<a href="docs/transcript/Transcript_MSc_UoE_Hao_Wang.pdf">Full HEAR Transcript</a>
+                                &emsp;<a href="../docs/transcript/Transcript_MSc_UoE_Hao_Wang.pdf">Full HEAR Transcript</a>
                                 <br />
                                 <br />
                                 - B.Eng., Telecommunication Engineering, Beijing University of Posts and Telecommunications, 2018
                                 <br />
-                                &emsp;Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel
+                                &emsp;Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel &emsp;<a href="docs/dissertation/beng/abstract.html">[Abstract]</a>
+                                <a href="docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
                                 <br />
                                 &emsp;Supervisor:
                                 <a href="https://sice.bupt.edu.cn/Home/Team_Intro1___individual_page/Team_Introduction/Men_Aidong_Team.htm">Aidong Men</a>
                                 <br />
-                                &emsp;<a href="docs/transcript/Transcript_BE_BUPT_Hao_Wang.pdf">Full Transcript</a>
+                                &emsp;<a href="../docs/transcript/Transcript_BE_BUPT_Hao_Wang.pdf">Full Transcript</a>
                                 <br />
                                 <br />
                                 - Exchange student, Högskolan i Skövde, Sept. 2016 - Jan. 2017
                                 <br />
-                                &emsp;<a href="docs/transcript/Certificate_Exchange_Hao_Wang.pdf">Course certificate</a>
+                                &emsp;<a href="../docs/transcript/Certificate_Exchange_Hao_Wang.pdf">Course certificate</a>
                             </div>
                         </div>
                         <div class="row vspace-top-news">
@@ -178,9 +180,9 @@
                 </div>
             </div>
             <!-- Back to top -->
-            <div class="vspace-top">
+            <!-- <div class="vspace-top">
                 <a href="#about" style="display: block; text-align: center;">[Back to Top]</a>
-            </div>
+            </div> -->
         </div>
 
         <!-- <div id='footer' class='vspace-top'>
