--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -151,7 +151,7 @@
                                 - B.Eng., Telecommunication Engineering, Beijing University of Posts and Telecommunications, 2018
                                 <br />
                                 &emsp;Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel &emsp;<a href="docs/dissertation/beng/abstract.html">[Abstract]</a>
-                                <a href="docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
+                                <a href="../docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
                                 <br />
                                 &emsp;Supervisor:
                                 <a href="https://sice.bupt.edu.cn/Home/Team_Intro1___individual_page/Team_Introduction/Men_Aidong_Team.htm">Aidong Men</a>
