add citation for msc thesis

--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -141,6 +141,7 @@
                                 <br />
                                 &emsp;Dissertation: Gender Identification from 3D Facial Surface Model &emsp;<a href="../docs/dissertation/msc/abstract.html">[Abstract]</a>
                                 <a href="../docs/dissertation/msc/[2019][MSc]Gender Identification from 3D Facial Surface Model.pdf">[PDF]</a>
+                                <a href="../docs/dissertation/msc/cite.html">[Citation]</a>
                                 <br />
                                 &emsp;Supervisor:
                                 <a href="https://homepages.inf.ed.ac.uk/rbf/">Robert B. Fisher</a>
