--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
                                     <a href="docs/dissertation/msc/abstract.html">[Abstract]</a>
                                     <a href="docs/dissertation/msc/[2019][MSc]Gender Identification from 3D Facial Surface Model.pdf">[PDF]</a>
                                     <!-- <a href="https://project-archive.inf.ed.ac.uk/all/msc/20193468/msc_proj.pdf">[PDF]</a> -->
+                                    <a href="docs/dissertation/msc/cite.html">[Citation]</a>
                                 </div>
                             </div>
                         </div>
