--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -139,8 +139,7 @@
                             <div class="col">
                                 - MSc (with Distinction), Informatics, The University of Edinburgh, 2019
                                 <br />
-                                &emsp;Dissertation: Gender Identification from 3D Facial Surface Model &emsp;<a href="../docs/dissertation/msc/abstract.html">[Abstract]</a>
-                                <a href="../docs/dissertation/msc/[2019][MSc]Gender Identification from 3D Facial Surface Model.pdf">[PDF]</a>
+                                &emsp;Dissertation: Gender Identification from 3D Facial Surface Model &emsp;<a href="../docs/dissertation/msc/[2019][MSc]Gender Identification from 3D Facial Surface Model.pdf">[PDF]</a>
                                 <a href="../docs/dissertation/msc/cite.html">[Citation]</a>
                                 <br />
                                 &emsp;Supervisor:
@@ -151,8 +150,7 @@
                                 <br />
                                 - B.Eng., Telecommunication Engineering, Beijing University of Posts and Telecommunications, 2018
                                 <br />
-                                &emsp;Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel &emsp;<a href="docs/dissertation/beng/abstract.html">[Abstract]</a>
-                                <a href="../docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
+                                &emsp;Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel &emsp;<a href="../docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
                                 <br />
                                 &emsp;Supervisor:
                                 <a href="https://sice.bupt.edu.cn/Home/Team_Intro1___individual_page/Team_Introduction/Men_Aidong_Team.htm">Aidong Men</a>
