--- a/subpage/contact.html
+++ b/subpage/contact.html
@@ -137,7 +137,7 @@
                             <br />
                             <br />
                             Email:
-                            <a href="mailto:haowang7308@gmail.com">jackw7308@gmail.com</a>
+                            <a href="mailto:haowang7308@gmail.com">haowang7308@gmail.com</a>
                             <br />
                             <br />
                             &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071;"></i></a> &emsp;<a href="https://github.com/HWANG7308"><i class="fab fa-github" style="font-size: 24px; color: #4f6071;"></i></a> &emsp;<a
