--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -139,7 +139,7 @@
                             <div class="col">
                                 - MSc (with Distinction), Informatics, The University of Edinburgh, 2019
                                 <br />
-                                &emsp;Dissertation: Gender Identification from 3D Facial Surface Model &emsp;<a href="../docs/dissertation/msc/[2019][MSc]Gender Identification from 3D Facial Surface Model.pdf">[PDF]</a>
+                                &emsp;Dissertation: Gender Identification from 3D Facial Surface Model &emsp;<a href="../docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">[PDF]</a>
                                 <a href="../docs/dissertation/msc/cite.html">[Citation]</a>
                                 <br />
                                 &emsp;Supervisor:
