update contact information and location

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hao Wang</title>
+        <title>Hao Wang's Homepage</title>
 
         <!-- Meta tags -->
         <meta charset="utf-8" />
@@ -113,11 +113,11 @@
     <body>
         <div class="topnav">
             <div class="container">
-                <a href="./subpage/contact.html">Contact</a>
+                <a href="#contact">Contact</a>
                 <a href="./subpage/aboutme.html">About Me</a>
                 <a href="#project">Project</a>
                 <a href="#publication">Publication</a>
-                <a href="#news">News</a>
+                <!-- <a href="#news">News</a> -->
                 <a href="index.html">Home</a>
             </div>
         </div>
@@ -182,7 +182,7 @@
                     </div>
 
                     <!-- List of news -->
-                    <div id="news" class="vspace-top">
+                    <!-- <div id="news" class="vspace-top">
                         <h1>News</h1>
                         <div style="overflow: auto; height: 180px;">
                             <div class="row vspace-top-news">
@@ -233,12 +233,12 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!-- List of publications -->
                     <div id="publication" class="vspace-top">
                         <h1>Publication</h1>
-                        <div class="row vspace-top">
+                        <div class="row vspace-top-news">
                             <div class="col-sm-3">
                                 <img src="imgs/preprint.jpg" class="img-fluid" />
                             </div>
@@ -295,6 +295,26 @@
                                     <a href="docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+
+                    <div id="contact" class="vspace-top">
+                        <h1>Contact</h1>
+                        <div class="vspace-top-news">
+                            <p>
+                                Feel free to get in touch! I'll get back to you ASAP :D
+                                <br />
+                                <br />
+                                &emsp;<a href="mailto:haowang7308@gmail.com"><i class="far fa-envelope" style="font-size: 24px; color: #4f6071;"></i></a> &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4f6071;"></i></a> &emsp;<a
+                                    href="https://github.com/HWANG7308"
+                                    ><i class="fab fa-github" style="font-size: 24px; color: #4f6071;"></i
+                                ></a>
+                                &emsp;<a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4f6071;"></i></a> &emsp;<a href="https://www.facebook.com/profile.php?id=100007039683298"
+                                    ><i class="fab fa-facebook-f" style="font-size: 24px; color: #4f6071;"></i
+                                ></a>
+                                &emsp;<a href="https://www.instagram.com/_1wanghao1_/"><i class="fab fa-instagram" style="font-size: 24px; color: #4f6071;"></i></a>
+                                <!-- &emsp;<a href="https://twitter.com/HW7308"><i class="fab fa-twitter" style="font-size: 24px; color: #4F6071;"></i></a> -->
+                            </p>
                         </div>
                     </div>
                 </div>
