--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -116,11 +116,11 @@
     <body>
         <div class="topnav">
             <div class="container">
-                <a href="./contact.html">Contact</a>
+                <a href="../index.html#contact">Contact</a>
                 <a href="#about">About Me</a>
                 <a href="../index.html#project">Project</a>
                 <a href="../index.html#publication">Publication</a>
-                <a href="../index.html#news">News</a>
+                <!-- <a href="../index.html#news">News</a> -->
                 <a href="../index.html">Home</a>
             </div>
         </div>
