--- a/subpage/contact.html
+++ b/subpage/contact.html
@@ -120,7 +120,7 @@
                 <a href="./aboutme.html">About Me</a>
                 <a href="../index.html#project">Project</a>
                 <a href="../index.html#publication">Publication</a>
-                <a href="../index.html#news">News</a>
+                <!-- <a href="../index.html#news">News</a> -->
                 <a href="../index.html">Home</a>
             </div>
         </div>
@@ -133,7 +133,7 @@
                     </div>
                     <div class="vspace-top">
                         <p>
-                            Feel free to get in touch! I will get back to you ASAP :D
+                            Feel free to get in touch! I'll get back to you ASAP :D
                             <br />
                             <br />
                             <a href="mailto:haowang7308@gmail.com">haowang7308@gmail.com</a>
