update about me

--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hao Wang</title>
+        <title>Hao Wang's bio</title>
 
         <!-- Meta tags -->
         <meta charset="utf-8" />
@@ -125,63 +125,94 @@
             </div>
         </div>
 
-        <div id="about" class="container">
+        <div class="container">
             <div class="row vspace-top">
                 <div class="col offset-sm-1">
+                    <div class="vspace-top">Here is my <a href="../pdfs/CV_Hao_Wang.pdf">CV</a> if you are interested!</div>
                     <div class="vspace-top">
-                        <h1>About Me</h1>
-                    </div>
-                    <div class="vspace-top">
+                        <h1>Education</h1>
                         <div class="row vspace-top-news">
                             <div class="col-sm-2 news-date">
-                                Education
+                                <img src="../imgs/uoe_logo.png" class="img-fluid" />
                             </div>
                             <div class="col">
-                                - MSc (with Distinction), Informatics, The University of Edinburgh, 2019
+                                <b>MSc (with Distinction) in Informatics</b>, 2019
                                 <br />
-                                &emsp;Dissertation: Gender Identification from 3D Facial Surface Model &emsp;<a href="../docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">[PDF]</a>
+                                The University of Edinburgh
+                                <br />
+                                Dissertation: Gender Identification from 3D Facial Surface Model <a href="../docs/dissertation/msc/[2019][MSc]Gender_Identification_from_3D_Facial_Surface_Model.pdf">[PDF]</a>
                                 <a href="../docs/dissertation/msc/cite.html">[Citation]</a>
                                 <br />
-                                &emsp;Supervisor:
+                                Supervisor:
                                 <a href="https://homepages.inf.ed.ac.uk/rbf/">Robert B. Fisher</a>
                                 <br />
-                                &emsp;<a href="../docs/transcript/Transcript_MSc_UoE_Hao_Wang.pdf">Full HEAR Transcript</a>
-                                <br />
-                                <br />
-                                - B.Eng., Telecommunication Engineering, Beijing University of Posts and Telecommunications, 2018
-                                <br />
-                                &emsp;Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel &emsp;<a href="../docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
-                                <br />
-                                &emsp;Supervisor:
-                                <a href="https://sice.bupt.edu.cn/Home/Team_Intro1___individual_page/Team_Introduction/Men_Aidong_Team.htm">Aidong Men</a>
-                                <br />
-                                &emsp;<a href="../docs/transcript/Transcript_BE_BUPT_Hao_Wang.pdf">Full Transcript</a>
-                                <br />
-                                <br />
-                                - Exchange student, Högskolan i Skövde, Sept. 2016 - Jan. 2017
-                                <br />
-                                &emsp;<a href="../docs/transcript/Certificate_Exchange_Hao_Wang.pdf">Course certificate</a>
+                                <a href="../docs/transcript/Transcript_MSc_UoE_Hao_Wang.pdf">Full HEAR Transcript</a>
                             </div>
                         </div>
                         <div class="row vspace-top-news">
                             <div class="col-sm-2 news-date">
-                                Research Experience
+                                <img src="../imgs/bupt_logo.png" class="img-fluid" />
                             </div>
                             <div class="col">
-                                - Research Intern, National Laboratory of Pattern Recognition, CASIA, Oct. 2019 - present
+                                <b>B.Eng. in Telecommunication Engineering</b>, 2018
                                 <br />
+                                Beijing University of Posts and Telecommunications
                                 <br />
-                                - Undergraduate Research Assistant, Next Generation Internet Research Center, BUPT, May - Oct. 2017
+                                Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel <a href="../docs/dissertation/beng/[2018][B.Eng.]将卷积神经网络应用于子像素的图像超分辨率实现.pdf">[PDF]</a>
+                                <br />
+                                Supervisor:
+                                <a href="https://sice.bupt.edu.cn/Home/Team_Intro1___individual_page/Team_Introduction/Men_Aidong_Team.htm">Aidong Men</a>
+                                <br />
+                                <a href="../docs/transcript/Transcript_BE_BUPT_Hao_Wang.pdf">Full Transcript</a>
                             </div>
                         </div>
-                        <div class="vspace-top">Here is my <a href="../pdfs/CV_Hao_Wang.pdf">CV</a> if you are interested!</div>
+                        <div class="row vspace-top-news">
+                            <div class="col-sm-2 news-date">
+                                <img src="../imgs/his_logo.png" class="img-fluid" />
+                            </div>
+                            <div class="col">
+                                <b>Exchange student</b>, Sept. 2016 - Jan. 2017
+                                <br />
+                                University of Skövde
+                                <br />
+                                <a href="../docs/transcript/Certificate_Exchange_Hao_Wang.pdf">Course certificate</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="vspace-top">
+                        <h1>Research Experience</h1>
+                        <div class="row vspace-top-news">
+                            <div class="col-sm-2 news-date">
+                                <img src="../imgs/casia_logo.png" class="img-fluid" />
+                            </div>
+                            <div class="col">
+                                <b>Research Intern</b>, Oct. 2019 - present
+                                <br />
+                                Center for Biometrics and Security Research (CBSR) & National Laboratory of Pattern Recognition (NLPR)
+                                <br />
+                                Institute of Automation, Chinese Academy of Sciences (CASIA)
+                            </div>
+                        </div>
+                        <div class="row vspace-top-news">
+                            <div class="col-sm-2 news-date">
+                                <img src="../imgs/bupt_logo.png" class="img-fluid" />
+                            </div>
+                            <div class="col">
+                                <b>Undergraduate Research Assistant</b>, May - Oct. 2017
+                                <br />
+                                Next Generation Internet Research Center
+                                <br />
+                                Beijing University of Posts and Telecommunications (BUPT)
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- Back to top -->
-            <!-- <div class="vspace-top">
+            <div class="vspace-top">
                 <a href="#about" style="display: block; text-align: center;">[Back to Top]</a>
-            </div> -->
+            </div>
         </div>
 
         <!-- <div id='footer' class='vspace-top'>
